--- a/gifts/src/NavigationBar/NavigationBar.css
+++ b/gifts/src/NavigationBar/NavigationBar.css
@@ -1,10 +1,13 @@
 nav {
     background-color: rgb(124, 124, 124);
-    width: 100%;
     padding: 1rem;
 }
 
 nav ul {
     list-style: none;
     display: inline;
+}
+
+.divider {
+    color: black;
 }
