feat: Added Note component. Using Notes on LandingPage. Updated pricing on one some items. Added notes prop to giftTile.

--- a/gifts/src/LandingPage.css
+++ b/gifts/src/LandingPage.css
@@ -13,3 +13,10 @@ p {
   font-size: 1rem;
   padding-bottom: 2rem;
 }
+
+.notes {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
