--- a/gifts/src/LandingPage.css
+++ b/gifts/src/LandingPage.css
@@ -1,8 +1,9 @@
 .section {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto auto;
   justify-content: center;
   align-items: center;
-  margin: 0 2rem;
+  /* margin: 0 2rem; */
 }
 
 h1 {
@@ -24,4 +25,29 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.links-text {
+  margin-top: 1rem;
+}
+
+.links {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  align-items: center;
+}
+
+div > li {
+  padding: 1rem;
+  font-size: 2rem;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .section {
+    grid-template-columns: 80vw;
+  }
 }
