--- a/gifts/src/LandingPage.css
+++ b/gifts/src/LandingPage.css
@@ -1,3 +1,12 @@
+.loading, .error, .no-registry {
+  margin-top: 50vh;
+  font-size: 3rem;
+}
+
+.no-gifts {
+  margin: 2rem;
+}
+
 .section {
   display: grid;
   grid-template-columns: auto auto auto;
